--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Bot Legend Of Nexus</title>
 </head>
 <body>
-    <h1>Test Github Page</h1>
-    <p>test</p>
+    <h1>Test Github Page fot bot</h1>
 </body>
 </html>
