--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Test Github Page fot bot</h1>
+    <a href="privacy.html">privacy policy</a>
+    <a href="terms.html">terms of services</a>
 </body>
 </html>
