--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
     <title>Bot Legend Of Nexus</title>
 </head>
 <body>
-    <h1>Test Github Page fot bot</h1>
+    <h1>Tiktok App Legend Of Nexus</h1>
+
+    <h2>À propos de notre application</h2>
+
+    <p>
+        Ce site utilise l'API officielle de TikTok pour simplifier le processus de publication de vidéos.<br>
+        Grâce à notre interface intuitive, vous pouvez facilement télécharger vos contenus et les publier<br> 
+        directement sur votre compte TikTok en quelques clics.<br> 
+        Que vous soyez créateur de contenu ou gestionnaire de médias sociaux,<br>
+        cette plateforme offre un moyen rapide et efficace de partager vos vidéos<br>
+        tout en respectant les normes et les politiques de TikTok.<br>
+        Vos données sont protégées et l'utilisation de l'API garantit une expérience fluide et sécurisée.<br>
+    </p>
+
     <a href="privacy.html">privacy policy</a>
     <a href="terms.html">terms of services</a>
 </body>
