--- a/privacy.html
+++ b/privacy.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <h1>Privacy Policy</h1>
-    <p>Effective Date: [Insert Date]</p>
+    <p>Effective Date: 15/12/2024</p>
     
     <h2>1. Introduction</h2>
     <p>We are committed to protecting your privacy. This Privacy Policy explains how we collect, use, and protect your personal data when you use our application or services.</p>
@@ -56,6 +56,6 @@
     </ul>
     
     <h2>7. Contact Us</h2>
-    <p>If you have any questions about this Privacy Policy, contact us at: [Your Email Address]</p>
+    <p>If you have any questions about this Privacy Policy, contact us at: legendofnexus@gmail.com</p>
 </body>
 </html>
