--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bot Legend Of Nexus</title>
+    tiktok-developers-site-verification=qejmLHs94eCkC9wczcDUQTCxEqcEnwsm
 </head>
 <body>
     <h1>Tiktok App Legend Of Nexus</h1>
