--- a/terms.html
+++ b/terms.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service</title>
+    <meta name="tiktok-developers-site-verification" content="qejmLHs94eCkC9wczcDUQTCxEqcEnwsm">
     <style>
         body {
             font-family: Arial, sans-serif;
